// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`JianWen blocks - headings, titles and quotes parses all heading levels and foldable headings 1`] = `
[
  {
    "blockAttrs": {
      "position": "L",
    },
    "children": [
      {
        "type": "text",
        "value": "H1",
      },
    ],
    "foldable": undefined,
    "level": 1,
    "type": "heading",
  },
  {
    "blockAttrs": {
      "position": "L",
    },
    "children": [
      {
        "type": "text",
        "value": "H2",
      },
    ],
    "foldable": undefined,
    "level": 2,
    "type": "heading",
  },
  {
    "blockAttrs": {
      "position": "L",
    },
    "children": [
      {
        "type": "text",
        "value": "H3",
      },
    ],
    "foldable": undefined,
    "level": 3,
    "type": "heading",
  },
  {
    "blockAttrs": {
      "position": "L",
    },
    "children": [
      {
        "type": "text",
        "value": "H4",
      },
    ],
    "foldable": undefined,
    "level": 4,
    "type": "heading",
  },
  {
    "blockAttrs": {
      "position": "L",
    },
    "children": [
      {
        "type": "text",
        "value": "H5",
      },
    ],
    "foldable": undefined,
    "level": 5,
    "type": "heading",
  },
  {
    "blockAttrs": {
      "position": "L",
    },
    "children": [
      {
        "type": "text",
        "value": "Foldable H1",
      },
    ],
    "foldable": true,
    "level": 1,
    "type": "heading",
  },
  {
    "blockAttrs": {
      "fold": true,
      "position": "L",
    },
    "children": [
      {
        "type": "text",
        "value": "Foldable H2",
      },
    ],
    "foldable": true,
    "level": 2,
    "type": "heading",
  },
  {
    "blockAttrs": {
      "fold": true,
      "position": "L",
    },
    "children": [
      {
        "type": "text",
        "value": "Foldable H3",
      },
    ],
    "foldable": true,
    "level": 3,
    "type": "heading",
  },
  {
    "blockAttrs": {
      "fold": true,
      "position": "L",
    },
    "children": [
      {
        "type": "text",
        "value": "Foldable H4",
      },
    ],
    "foldable": true,
    "level": 4,
    "type": "heading",
  },
  {
    "blockAttrs": {
      "fold": true,
      "position": "L",
    },
    "children": [
      {
        "type": "text",
        "value": "Foldable H5",
      },
    ],
    "foldable": true,
    "level": 5,
    "type": "heading",
  },
]
`;

exports[`JianWen blocks - headings, titles and quotes parses contentTitle and image title lines 1`] = `
[
  {
    "blockAttrs": {
      "position": "L",
    },
    "roundedRadius": undefined,
    "shape": undefined,
    "title": "Standalone content title",
    "type": "image",
    "url": "hero.png",
  },
]
`;

exports[`JianWen blocks - headings, titles and quotes parses nested quotes with paragraphs and lists inside 1`] = `
[
  {
    "blockAttrs": {
      "position": "L",
    },
    "children": [
      {
        "blockAttrs": {
          "position": "L",
        },
        "children": [
          {
            "type": "text",
            "value": "Top quote",
          },
        ],
        "type": "paragraph",
      },
      {
        "blockAttrs": {
          "position": "L",
        },
        "children": [
          {
            "blockAttrs": {
              "position": "L",
            },
            "children": [
              {
                "type": "text",
                "value": "Nested quote level 2
Nested inner paragraph",
              },
            ],
            "type": "paragraph",
          },
        ],
        "level": 2,
        "type": "quote",
      },
      {
        "blockAttrs": {
          "position": "L",
        },
        "children": [
          {
            "type": "text",
            "value": "Still in top quote",
          },
        ],
        "type": "paragraph",
      },
    ],
    "level": 1,
    "type": "quote",
  },
]
`;

exports[`JianWen blocks - hr, tags and comments parses various horizontal rules with colors and tagged blocks 1`] = `
[
  {
    "blockAttrs": {
      "position": "L",
    },
    "child": {
      "blockAttrs": {
        "position": "L",
      },
      "colorAttr": {
        "kind": "hex",
        "value": "#FF0000",
      },
      "style": "solid",
      "type": "hr",
    },
    "name": "section",
    "type": "taggedBlock",
  },
  {
    "blockAttrs": {
      "position": "L",
    },
    "colorAttr": undefined,
    "style": "dashed",
    "type": "hr",
  },
  {
    "blockAttrs": {
      "position": "L",
    },
    "colorAttr": undefined,
    "style": "bold",
    "type": "hr",
  },
  {
    "blockAttrs": {
      "position": "L",
    },
    "colorAttr": undefined,
    "style": "wavy",
    "type": "hr",
  },
]
`;

exports[`JianWen blocks - hr, tags and comments wraps blocks inside commentBlock using [comment] attribute line 1`] = `
[
  {
    "blockAttrs": undefined,
    "children": [
      {
        "blockAttrs": {
          "position": "L",
        },
        "children": [
          {
            "type": "text",
            "value": "Hidden heading",
          },
        ],
        "foldable": undefined,
        "level": 2,
        "type": "heading",
      },
    ],
    "type": "commentBlock",
  },
  {
    "blockAttrs": {
      "position": "L",
    },
    "children": [
      {
        "children": [
          {
            "children": [
              {
                "type": "text",
                "value": "hidden list item",
              },
            ],
            "type": "paragraph",
          },
        ],
        "indent": 1,
        "kind": "bullet",
        "ordinal": undefined,
        "taskStatus": undefined,
        "type": "listItem",
      },
    ],
    "kind": "bullet",
    "orderedStyle": undefined,
    "type": "list",
  },
]
`;

exports[`JianWen blocks - lists and tasks parses nested bullet, ordered, foldable and task lists 1`] = `
[
  {
    "blockAttrs": {
      "position": "L",
    },
    "children": [
      {
        "children": [
          {
            "children": [
              {
                "type": "text",
                "value": "bullet 1",
              },
            ],
            "type": "paragraph",
          },
          {
            "children": [
              {
                "children": [
                  {
                    "children": [
                      {
                        "type": "text",
                        "value": "bullet 1.1",
                      },
                    ],
                    "type": "paragraph",
                  },
                ],
                "indent": 2,
                "kind": "bullet",
                "ordinal": undefined,
                "taskStatus": undefined,
                "type": "listItem",
              },
            ],
            "kind": "bullet",
            "orderedStyle": undefined,
            "type": "list",
          },
        ],
        "indent": 1,
        "kind": "bullet",
        "ordinal": undefined,
        "taskStatus": undefined,
        "type": "listItem",
      },
    ],
    "kind": "bullet",
    "orderedStyle": undefined,
    "type": "list",
  },
  {
    "blockAttrs": {
      "position": "L",
    },
    "children": [
      {
        "children": [
          {
            "children": [
              {
                "type": "text",
                "value": "ordered 1",
              },
            ],
            "type": "paragraph",
          },
          {
            "children": [
              {
                "children": [
                  {
                    "children": [
                      {
                        "type": "text",
                        "value": "ordered 1.1",
                      },
                    ],
                    "type": "paragraph",
                  },
                ],
                "indent": 2,
                "kind": "ordered",
                "ordinal": "1.1",
                "taskStatus": undefined,
                "type": "listItem",
              },
            ],
            "kind": "ordered",
            "orderedStyle": "decimal",
            "type": "list",
          },
        ],
        "indent": 1,
        "kind": "ordered",
        "ordinal": "1",
        "taskStatus": undefined,
        "type": "listItem",
      },
    ],
    "kind": "ordered",
    "orderedStyle": "decimal",
    "type": "list",
  },
  {
    "blockAttrs": {
      "position": "L",
    },
    "children": [
      {
        "children": [
          {
            "children": [
              {
                "type": "text",
                "value": "foldable root",
              },
            ],
            "type": "paragraph",
          },
          {
            "children": [
              {
                "children": [
                  {
                    "children": [
                      {
                        "type": "text",
                        "value": "foldable child in progress",
                      },
                    ],
                    "type": "paragraph",
                  },
                ],
                "indent": 2,
                "kind": "foldable",
                "ordinal": "1.1",
                "taskStatus": "in_progress",
                "type": "listItem",
              },
            ],
            "kind": "foldable",
            "orderedStyle": undefined,
            "type": "list",
          },
        ],
        "indent": 1,
        "kind": "foldable",
        "ordinal": "1",
        "taskStatus": "unknown",
        "type": "listItem",
      },
    ],
    "kind": "foldable",
    "orderedStyle": undefined,
    "type": "list",
  },
  {
    "blockAttrs": {
      "position": "L",
    },
    "children": [
      {
        "children": [
          {
            "children": [
              {
                "type": "text",
                "value": "task not done",
              },
            ],
            "type": "paragraph",
          },
        ],
        "indent": 1,
        "kind": "task",
        "ordinal": undefined,
        "taskStatus": "not_done",
        "type": "listItem",
      },
      {
        "children": [
          {
            "children": [
              {
                "type": "text",
                "value": "task done",
              },
            ],
            "type": "paragraph",
          },
        ],
        "indent": 1,
        "kind": "task",
        "ordinal": undefined,
        "taskStatus": "done",
        "type": "listItem",
      },
    ],
    "kind": "task",
    "orderedStyle": undefined,
    "type": "list",
  },
]
`;

exports[`JianWen blocks - tables and alignment parses table with alignment row and multiple data rows 1`] = `
[
  {
    "align": [
      "left",
      "right",
    ],
    "blockAttrs": {
      "position": "L",
    },
    "rows": [
      {
        "cells": [
          {
            "align": "left",
            "children": [
              {
                "type": "text",
                "value": "name",
              },
            ],
            "type": "tableCell",
          },
          {
            "align": "right",
            "children": [
              {
                "type": "text",
                "value": "value",
              },
            ],
            "type": "tableCell",
          },
        ],
        "type": "tableRow",
      },
      {
        "cells": [
          {
            "align": "left",
            "children": [
              {
                "type": "text",
                "value": "a",
              },
            ],
            "type": "tableCell",
          },
          {
            "align": "right",
            "children": [
              {
                "type": "text",
                "value": "1",
              },
            ],
            "type": "tableCell",
          },
        ],
        "type": "tableRow",
      },
      {
        "cells": [
          {
            "align": "left",
            "children": [
              {
                "type": "text",
                "value": "b",
              },
            ],
            "type": "tableCell",
          },
          {
            "align": "right",
            "children": [
              {
                "type": "text",
                "value": "2",
              },
            ],
            "type": "tableCell",
          },
        ],
        "type": "tableRow",
      },
    ],
    "type": "table",
  },
]
`;
